--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contacts'">
     </section>
-    <section id="contact">
+    <section id="contacts">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
