--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -31,7 +31,7 @@
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li> 
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li> 
             </div>
         </div>
     </nav>
@@ -45,7 +45,7 @@
             <p class="section__text__p2">Fullstack Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/Abbaba_Resume.pdf')">Download CV</button>
-                <button class="btn btn-color-1" onclick="location.href='#contacts'">Contact info</button>
+                <button class="btn btn-color-1" onclick="location.href='#contact'">Contact info</button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/in/abbaba-toure/'">
@@ -179,9 +179,9 @@
                 
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contacts'">
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'">
     </section>
-    <section id="contacts">
+    <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
@@ -202,7 +202,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
