--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Hello, i am a Second-year student at the University of Ottawa, working towards a goal of graduation in 2028 with a bachelor's degree in software engineering. I love learning new skills and expanding my experiences. I am currently working on expending my skills and knowledge about software development through academic courses that are available to me and by involving myself in diverse projects alone and with peers. In my coop journey, my goal is to improve as a software engineer by developing different software development abilities and making contributions to real-life projects that will have a big impact on the software industry.
+                        Hello, I am a second-year student at the University of Ottawa, working towards graduating in 2028 with a bachelor's degree in software engineering. I love learning new skills and expanding my experiences. I am currently working on expanding my skills and knowledge in software development through academic courses available to me and by involving myself in diverse projects both alone and with peers. In my co-op journey, my goal is to improve as a software engineer by developing various software development abilities and contributing to real-life projects that will have a significant impact on the software industry.
                     </p>
                 </div>
             </div>
